# zk-rollup-near-circom

./: .gitignore  README.md  ic.json  imp-codes.md  keys.json  package-lock.json  package.json
blockchain/testchain/testchain/: accounts.txt  genesis.json
core-zk/: info.md
core-zk/circuit/: circuit.circom  circuit.sym  response_0003  verification_key.json  verifier.sol
core-zk/circuit/circomlib/: README.md  package.json
core-zk/circuit/circuit_js/: circuit.wasm
core-zk/contract-rust/: call_new.js  call_submit_batch.js  compile.js  deploy.js  ic.js  ic.json  package-lock.json  package.json  run.sh  sequencer.js  test.js  test_call_new.js  test_call_submit_batch.js  test_deploy.js  test_run.sh  test_sequencer.js
core-zk/contract-rust/contract/: Cargo.toml
core-zk/contract-rust/contract/src/: lib.rs  test.rs
core-zk/contract-rust/sub-modules/: create_batch_witness_proof_output.js  store_transactions.js  test_update_state.js  update_state.js  update_state_verify_contract_call.js
core-zk/json_db/: del.js  info.md
core-zk/json_db/batch/: 0.json  1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
core-zk/json_db/proof/: 0.json  1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
core-zk/json_db/public/: 0.json  1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
core-zk/json_db/witness/: 0.wtns  1.wtns  10.wtns  2.wtns  3.wtns  4.wtns  5.wtns  6.wtns  7.wtns  8.wtns  9.wtns
l1-l2-bridge/: README.md
l1-l2-bridge/backend/: info.md
l1-l2-bridge/frontend/: info.md
(+28 files in other folders)
